k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-habittracker
  namespace: react-habittracker
spec:
  selector:
    app: react-habittracker
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
